Fix dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -16,9 +16,11 @@ body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	text-align: center;
+	background-color: var(--background-color);
+	color: var(--text-color);
 }
 a {
-	color: #f79b4e;
+	color: var(--link-color);
 	text-decoration: underline;
 }
 a:hover {
